# DirectStock

./: .ai-context.md  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp 2.json  .mcp.json  .pre-commit-config.yaml  AGENTS 2.md  AGENTS.md  ARCHITECTURE.md  CLAUDE 2.md  CLAUDE.md  CODEX 2.md  CODEX.md  GEMINI 2.md  GEMINI.md  Makefile  README.md  Wareneingang-Prozess-Flowcharts.md  Wareneingang-Standard-Flowchart-Druck.md  blackhole.txt  code_review.md  codex.json  directstock.md  directstock_phase1.md  directstock_phase2.md  directstock_phase3.md  directstock_phase4.md  directstock_phase5.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frontend_analysis.md  improve_frontend.md  llm_ready.md  llms.txt  modern_frontend.md  ralph_plan.md  ui_ux_plan.json
backend/: AGENTS.md  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/app/: __init__.py  bootstrap.py  bootstrap_permissions.py  bootstrap_permissions_data.py  bootstrap_permissions_seed.py  bootstrap_roles.py  bootstrap_seed.py  config.py  database.py  dependencies.py  main.py
backend/directstock_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  phase3_utils.py  phase5_utils.py  test_abc_classification.py  test_alerts.py  test_audit.py  test_audit_mutations_phase6.py  test_audit_trail_phase3.py  test_auth.py  test_auth_seed_contract.py  test_batch_tracking.py  test_customers.py  test_customers_hierarchy.py  test_dashboard.py  test_dhl_express_adapter.py  test_documents.py  (+41 more)
(+904 files in other folders)
