[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "directstock-backend"
version = "0.1.0"
description = "DirectStock backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "bcrypt==4.0.1",
  "email-validator==2.2.0",
  "fastapi>=0.115.6,<1.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "pikepdf>=9.8.1,<10.0.0",
  "pydantic>=2.10.3,<3.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "python-multipart>=0.0.18,<1.0.0",
  "psycopg[binary]>=3.2.13,<4.0.0",
  "qrcode[pil]>=8.0,<9.0.0",
  "reportlab>=4.4.0,<5.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0,<1.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "ignore:.*get_event_loop_policy.*deprecated.*:DeprecationWarning:pytest_asyncio.plugin",
  "ignore:.*set_event_loop_policy.*deprecated.*:DeprecationWarning:pytest_asyncio.plugin",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"
